[workspace]
resolver = "2"
members  = ["crates/hsh", "crates/hsh-cli", "crates/hsh-digest", "crates/hsh-kms"]
# fuzz/ is a libfuzzer crate driven by cargo-fuzz (`cargo +nightly fuzz`);
# it depends on the unstable libfuzzer runtime and must not be part of
# the default `cargo build --workspace` set.
exclude  = ["fuzz"]

[workspace.package]
authors       = ["Sebastien Rousseau <sebastian.rousseau@gmail.com>", "The Hash (HSH) library contributors"]
edition       = "2021"
rust-version  = "1.75"
license       = "MIT OR Apache-2.0"
repository    = "https://github.com/sebastienrousseau/hsh"
homepage      = "https://hshlib.com/"
documentation = "https://docs.rs/hsh"
categories    = ["authentication", "cryptography"]
keywords      = ["argon2id", "password", "phc", "kdf", "scrypt"]

[workspace.dependencies]
# Foundation
password-hash = { version = "0.5", default-features = false, features = ["alloc"] }
subtle        = "2.6"
zeroize       = { version = "1.8", features = ["zeroize_derive"] }
thiserror     = "2.0"
rand_core     = { version = "0.6", features = ["std", "getrandom"] }
getrandom     = "0.2"

# Algorithms
argon2     = { version = "0.5", default-features = false, features = ["alloc", "password-hash"] }
base64     = "0.22.1"
bcrypt     = "0.16.0"
hmac       = "0.12"
pbkdf2     = { version = "0.12", default-features = false, features = ["password-hash", "simple"] }
scrypt     = { version = "0.11", default-features = false, features = ["simple"] }
sha2       = "0.10"
sha3       = "0.10"
blake3     = "1.5"
digest     = { version = "0.10", features = ["alloc"] }
serde      = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.137"
log        = { version = "0.4.25", features = ["std"] }

# FIPS backend — `aws-lc-rs` with `features = ["fips"]` is the target
# binding, but the AWS-LC FIPS sub-build needs Go + CMake + Xcode
# tooling that isn't universally available. The dep is intentionally
# left out of the workspace until the Phase 4 follow-up lands a
# dedicated `hsh-backend-awslc` crate behind a separate workspace
# member so callers without a FIPS-capable build env aren't blocked.
# See doc/FIPS.md.

# Dev
assert_cmd = "2.0.14"
criterion  = "0.5.1"
proptest   = "1.5"
hex        = "0.4"

# CLI deps (hsh-cli only)
clap          = { version = "4.5", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5"
# clap_mangen is currently version-skewed against clap_builder 4.5.2;
# revisit when both move. Manpage generation is a Phase 5 follow-up
# under release.yml — the CLI works without it.
anyhow        = "1.0"
rpassword     = "7.3"

[profile.dev]
codegen-units    = 256
debug            = true
debug-assertions = true
incremental      = true
lto              = false
opt-level        = 0
overflow-checks  = true
panic            = "unwind"
rpath            = false
strip            = false

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true       # security-critical: arithmetic on cost parameters must not silently wrap
panic            = "abort"
rpath            = false
strip            = "symbols"

[profile.test]
codegen-units    = 256
debug            = true
debug-assertions = true
incremental      = true
lto              = false
opt-level        = 0
overflow-checks  = true
rpath            = false
strip            = false

[profile.bench]
debug = true
