[workspace]
resolver = "2"
members  = ["crates/hsh", "crates/hsh-cli", "crates/hsh-digest", "crates/hsh-kms"]
# fuzz/ is a libfuzzer crate driven by cargo-fuzz (`cargo +nightly fuzz`);
# it depends on the unstable libfuzzer runtime and must not be part of
# the default `cargo build --workspace` set.
exclude  = ["fuzz"]

[workspace.package]
authors       = ["Sebastien Rousseau <sebastian.rousseau@gmail.com>", "The Hash (HSH) library contributors"]
edition       = "2021"
rust-version  = "1.75"
license       = "MIT OR Apache-2.0"
repository    = "https://github.com/sebastienrousseau/hsh"
homepage      = "https://hshlib.com/"
documentation = "https://docs.rs/hsh"
categories    = ["authentication", "cryptography"]
keywords      = ["argon2id", "password", "phc", "kdf", "scrypt"]

[workspace.dependencies]
# Foundation
password-hash = { version = "0.5", default-features = false, features = ["alloc"] }
subtle        = "2.6"
zeroize       = { version = "1.8", features = ["zeroize_derive"] }
thiserror     = "2.0"
rand_core     = { version = "0.6", features = ["std", "getrandom"] }
getrandom     = "0.2"

# Algorithms
argon2     = { version = "0.5", default-features = false, features = ["alloc", "password-hash"] }
base64     = "0.22.1"
bcrypt     = "0.16.0"
hmac       = "0.12"
pbkdf2     = { version = "0.12", default-features = false, features = ["password-hash", "simple"] }
scrypt     = { version = "0.11", default-features = false, features = ["simple"] }
sha2       = "0.10"
sha3       = "0.10"
blake3     = "1.5"
digest     = { version = "0.10", features = ["alloc"] }
serde      = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.137"
log        = { version = "0.4.25", features = ["std"] }

# FIPS backend — `aws-lc-rs` with `features = ["fips"]` is the target
# binding, but the AWS-LC FIPS sub-build needs Go + CMake + Xcode
# tooling that isn't universally available. The dep is intentionally
# left out of the workspace until the Phase 4 follow-up lands a
# dedicated `hsh-backend-awslc` crate behind a separate workspace
# member so callers without a FIPS-capable build env aren't blocked.
# See doc/FIPS.md.

# Dev
assert_cmd = "2.0.14"
criterion  = "0.5.1"
proptest   = "1.5"
hex        = "0.4"

# CLI deps (hsh-cli only)
clap          = { version = "4.5", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5"
# clap_mangen is currently version-skewed against clap_builder 4.5.2;
# revisit when both move. Manpage generation is a Phase 5 follow-up
# under release.yml — the CLI works without it.
anyhow        = "1.0"
rpassword     = "7.3"

[workspace.lints.rust]
# Forbid — security-critical
unsafe_code                   = "forbid"
missing_debug_implementations = "forbid"
non_ascii_idents              = "forbid"
unreachable_pub               = "forbid"

# Warn
missing_docs                  = "deny"
missing_copy_implementations  = "warn"
unstable_features             = "warn"
unused_extern_crates          = "warn"
unused_results                = "warn"

# Deny
dead_code                     = "deny"
deprecated_in_future          = "deny"
ellipsis_inclusive_range_patterns = "deny"
explicit_outlives_requirements    = "deny"
future_incompatible           = { level = "deny", priority = -1 }
keyword_idents                = { level = "deny", priority = -1 }
macro_use_extern_crate        = "deny"
meta_variable_misuse          = "deny"
noop_method_call              = "deny"
rust_2018_idioms              = { level = "deny", priority = -1 }
rust_2021_compatibility       = { level = "deny", priority = -1 }
single_use_lifetimes          = "deny"
trivial_casts                 = "deny"
trivial_numeric_casts         = "deny"
unused                        = { level = "deny", priority = -1 }
unused_features               = "deny"
unused_import_braces          = "deny"
unused_labels                 = "deny"
unused_lifetimes              = "deny"
unused_macro_rules            = "deny"
unused_qualifications         = "deny"
variant_size_differences      = "deny"

[workspace.lints.clippy]
# Pedantic / nursery / cargo groups at warn — these are advisory.
# CI runs `cargo clippy -- -D warnings` for the BASE lints (above),
# while pedantic/nursery findings show up but don't fail the build
# (Cargo treats the cli-level -D warnings as an additive promotion).
all                     = { level = "warn", priority = -1 }
pedantic                = { level = "warn", priority = -1 }
nursery                 = { level = "warn", priority = -1 }
cargo                   = { level = "warn", priority = -1 }

# Explicit must-warns.
unwrap_used             = "warn"
expect_used             = "warn"

# Allow specific pedantic lints that are too noisy at the
# workspace-wide level.
module_name_repetitions  = "allow"
missing_errors_doc       = "allow"
missing_panics_doc       = "allow"
must_use_candidate       = "allow"
multiple_crate_versions  = "allow"
cargo_common_metadata    = "allow"
needless_pass_by_value   = "allow"
return_self_not_must_use = "allow"
similar_names            = "allow"
too_many_lines           = "allow"
items_after_statements   = "allow"
redundant_closure_for_method_calls = "allow"
implicit_hasher          = "allow"
# Documentation pedantry that fires on every prose paragraph.
doc_markdown                       = "allow"
doc_lazy_continuation              = "allow"
# Style preferences we don't enforce workspace-wide.
missing_const_for_fn               = "allow"
struct_field_names                 = "allow"
struct_excessive_bools             = "allow"
result_large_err                   = "allow"
significant_drop_tightening        = "allow"
# Nursery preview lints that produce noise without obvious wins.
option_if_let_else                 = "allow"
or_fun_call                        = "allow"
use_self                           = "allow"
redundant_pub_crate                = "allow"
inconsistent_struct_constructor    = "allow"
trivially_copy_pass_by_ref         = "allow"
needless_collect                   = "allow"
unused_self                        = "allow"
# Test code uses unwrap/expect freely; these warn at the workspace
# level but per-test-file `#![allow(...)]` silences them where
# legitimate.
unused_async                       = "allow"

[profile.dev]
codegen-units    = 256
debug            = true
debug-assertions = true
incremental      = true
lto              = false
opt-level        = 0
overflow-checks  = true
panic            = "unwind"
rpath            = false
strip            = false

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true       # security-critical: arithmetic on cost parameters must not silently wrap
panic            = "abort"
rpath            = false
strip            = "symbols"

[profile.test]
codegen-units    = 256
debug            = true
debug-assertions = true
incremental      = true
lto              = false
opt-level        = 0
overflow-checks  = true
rpath            = false
strip            = false

[profile.bench]
debug = true
