[package]
name        = "hsh"
version     = "0.0.9"
description = "Enterprise password hashing for Rust: Argon2i / bcrypt / scrypt today, Argon2id / PHC / KMS / FIPS on the v0.1 roadmap."
readme      = "../../README.md"
build       = "build.rs"

authors.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
repository.workspace    = true
homepage.workspace      = true
documentation.workspace = true
categories.workspace    = true
keywords.workspace      = true

exclude = [
    "/.git/*",
    "/.github/*",
    "/.gitignore",
    "/.vscode/*",
]

include = [
    "/build.rs",
    "/Cargo.toml",
    "/benches/**",
    "/examples/**",
    "/src/**",
    "/tests/**",
    "/../../CHANGELOG.md",
    "/../../LICENSE-APACHE",
    "/../../LICENSE-MIT",
    "/../../README.md",
    "/../../SECURITY.md",
]

[lib]
name       = "hsh"
path       = "src/lib.rs"
crate-type = ["lib"]

[[bench]]
name    = "benchmark"
harness = false
path    = "benches/criterion.rs"

[[example]]
name = "hsh"
path = "examples/hsh.rs"

[dependencies]
# Security primitives
subtle    = { workspace = true }
zeroize   = { workspace = true }
thiserror = { workspace = true }

# Algorithms — RustCrypto stack
argon2        = { workspace = true }
bcrypt        = { workspace = true }
scrypt        = { workspace = true }
sha2          = { workspace = true }
password-hash = { workspace = true }

# Encoding / serde
base64     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
log        = { workspace = true }

# RNG
rand_core = { workspace = true }
getrandom = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
criterion  = { workspace = true }
proptest   = { workspace = true }
hex        = { workspace = true }

[features]
default = []

# Re-export the v0.0.x stringly-typed API for one release cycle so existing
# users can upgrade gradually. To be removed in v0.2.0.
compat-v0_0_x = []

[package.metadata.docs.rs]
all-features    = true
targets         = ["x86_64-unknown-linux-gnu"]
rustdoc-args    = ["--cfg", "docsrs", "--generate-link-to-definition"]

[package.metadata.clippy]
warn-lints = ["clippy::all", "clippy::pedantic", "clippy::cargo", "clippy::nursery"]

# Linting config — preserves the existing strict matrix.
[lints.rust]
# Warn
missing_copy_implementations = "warn"
missing_docs                 = "warn"
unstable_features            = "warn"
unused_extern_crates         = "warn"
unused_results               = "warn"

# Allow
bare_trait_objects        = "allow"
elided_lifetimes_in_paths = "allow"
non_camel_case_types      = "allow"
non_upper_case_globals    = "allow"
trivial_bounds            = "allow"

# Forbid — security-critical
unsafe_code                   = "forbid"
missing_debug_implementations = "forbid"
non_ascii_idents              = "forbid"
unreachable_pub               = "forbid"

# Deny
dead_code                       = "deny"
deprecated_in_future            = "deny"
ellipsis_inclusive_range_patterns = "deny"
explicit_outlives_requirements  = "deny"
future_incompatible             = { level = "deny", priority = -1 }
keyword_idents                  = "deny"
macro_use_extern_crate          = "deny"
meta_variable_misuse            = "deny"
noop_method_call                = "deny"
rust_2018_idioms                = { level = "deny", priority = -1 }
rust_2021_compatibility         = { level = "deny", priority = -1 }
single_use_lifetimes            = "deny"
trivial_casts                   = "deny"
trivial_numeric_casts           = "deny"
unused                          = { level = "deny", priority = -1 }
unused_features                 = "deny"
unused_import_braces            = "deny"
unused_labels                   = "deny"
unused_lifetimes                = "deny"
unused_macro_rules              = "deny"
unused_qualifications           = "deny"
variant_size_differences        = "deny"
