[package]
name        = "hsh"
version     = "0.0.10"
description = "Enterprise password hashing for Rust: Argon2id / bcrypt / scrypt / PBKDF2 with PHC strings, KMS-backed pepper, and FIPS 140-3 routing through aws-lc-rs (CMVP Cert #4759)."
readme      = "../../README.md"
build       = "build.rs"

authors.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
repository.workspace    = true
homepage.workspace      = true
documentation.workspace = true
categories.workspace    = true
keywords.workspace      = true

exclude = [
    "/.git/*",
    "/.github/*",
    "/.gitignore",
    "/.vscode/*",
]

include = [
    "/build.rs",
    "/Cargo.toml",
    "/benches/**",
    "/examples/**",
    "/src/**",
    "/tests/**",
    "/../../CHANGELOG.md",
    "/../../LICENSE-APACHE",
    "/../../LICENSE-MIT",
    "/../../README.md",
    "/../../SECURITY.md",
]

[lib]
name       = "hsh"
path       = "src/lib.rs"
crate-type = ["lib"]

[[bench]]
name    = "benchmark"
harness = false
path    = "benches/criterion.rs"

[[example]]
name = "hsh"
path = "examples/hsh.rs"

[dependencies]
# Security primitives
subtle    = { workspace = true }
zeroize   = { workspace = true }
thiserror = { workspace = true }

# Algorithms — RustCrypto stack
argon2        = { workspace = true }
bcrypt        = { workspace = true }
hmac          = { workspace = true }
pbkdf2        = { workspace = true }
scrypt        = { workspace = true }
sha2          = { workspace = true }
password-hash = { workspace = true }

# Encoding / serde
base64     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
log        = { workspace = true }

# RNG
rand_core = { workspace = true }
getrandom = { workspace = true }

# Pepper / KMS — optional, behind the `pepper` feature.
hsh-kms = { version = "0.0.10", path = "../hsh-kms", optional = true }

# FIPS 140-3 routing — optional, behind the `fips` feature.
# This dep pulls in aws-lc-rs with the FIPS sub-build, which needs
# Go + CMake + recent clang on the build host. See doc/FIPS.md.
hsh-backend-awslc = { version = "0.0.10", path = "../hsh-backend-awslc", optional = true }

[dev-dependencies]
assert_cmd   = { workspace = true }
criterion    = { workspace = true }
proptest     = { workspace = true }
hex          = { workspace = true }
# Re-exported from `argon2` / `scrypt` already as a runtime dep; we
# add it here explicitly so the helper tests in tests/test_api_helpers.rs
# can construct `PasswordHash` values directly.
password-hash = { workspace = true }

[features]
default = []

# Re-export the v0.0.x stringly-typed API for one release cycle so existing
# users can upgrade gradually. To be removed in v0.2.0.
compat-v0_0_x = []

# Enables pepper / KMS integration via the `hsh-kms` companion crate.
# Off by default to keep the dependency surface minimal for callers that
# don't want it.
pepper = ["dep:hsh-kms"]

# FIPS 140-3 routing through aws-lc-rs (CMVP Cert #4759). Enabling
# this feature pulls in the `hsh-backend-awslc` companion crate, which
# routes PBKDF2-HMAC-SHA-{256,512} derivations through AWS-LC FIPS 3.0.
# Build host must have Go (>= 1.21), CMake (>= 3.18), and a recent
# clang. Argon2id / bcrypt / scrypt do NOT gain FIPS validation from
# this feature — no CMVP-validated implementation of those exists
# anywhere. See doc/FIPS.md + ADR-0004.
fips = ["dep:hsh-backend-awslc"]

[package.metadata.docs.rs]
# docs.rs builders don't ship the FIPS toolchain (Go + CMake), so we
# enable everything *except* `fips`. The pure-Rust PBKDF2 path that
# `default` exercises documents the same public API surface as the
# `fips` path — the difference is invisible at the type level.
features        = ["compat-v0_0_x", "pepper"]
targets         = ["x86_64-unknown-linux-gnu"]
rustdoc-args    = ["--cfg", "docsrs", "--generate-link-to-definition"]

[lints]
workspace = true
